[squashed] feature 1.2 (#4)
Co-authored-by: Chang <e.gauss@gmail.com>